--- a/templates/department/show.html.twig
+++ b/templates/department/show.html.twig
@@ -18,9 +18,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('department_index') }}">back to list</a>
-
-    <a href="{{ path('department_edit', {'id': department.id}) }}">edit</a>
-
-    {{ include('department/_delete_form.html.twig') }}
+    <a href="{{ path('department_index') }}" class="btn btn-primary">back to list</a>
 {% endblock %}
