--- a/templates/college/index.html.twig
+++ b/templates/college/index.html.twig
@@ -43,7 +43,7 @@
 {% endblock %}
 {% block maintitle %}
 
-	college
+	Manage colleges
 {% endblock %}
 {% block breadcrumb %}
 	<li class="breadcrumb-item active">Resource
@@ -89,7 +89,7 @@
 					<div class="col-md-12">
 						<div class="card card ">
 							<div class="card-header">
-								<h3 class="card-title">college List</h3>
+								<h3 class="card-title">College List</h3>
 								<div class="card-tools">
 
 									<form class="form-inline ml-3">
