--- a/templates/department/index.html.twig
+++ b/templates/department/index.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Departement index
+{% block title %} Departement index
 {% endblock %}
 {% block maintitle %}
 
-	department
+	Manage departments
 {% endblock %}
 {% block breadcrumb %}
-	<li class="breadcrumb-item active">Resource
+	<li class="breadcrumb-item active">Stock
 	</li>
 	<li class="breadcrumb-item active">department</li>
 {% endblock %}
@@ -50,7 +50,7 @@
 					<div class="col-md-12">
 						<div class="card card ">
 							<div class="card-header">
-								<h3 class="card-title">department List</h3>
+								<h3 class="card-title">Department List</h3>
 								<div class="card-tools">
 
 									<form class="form-inline ml-3">
