--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,13 +9,30 @@
         <div class="container-fluid">
           <!-- Small boxes (Stat box) -->
           <div class="row">
+
+           <div class="col-lg-3 col-6">
+              <!-- small box -->
+              <div class="small-box bg-success">
+                <div class="inner">
+                  {# <h3>53<sup style="font-size: 20px">%</sup></h3> #}
+                     <h3>250</h3>
+                  <p>Total Users</p>
+                </div>
+                <div class="icon">
+                  <i class="ion ion-stats-bars"></i>
+                </div>
+                <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+              </div>
+            </div>
+
+            
             <div class="col-lg-3 col-6">
               <!-- small box -->
               <div class="small-box bg-info">
                 <div class="inner">
-                  <h3>150</h3>
+                  <h3>180</h3>
 
-                  <p>New Orders</p>
+                  <p>New Products</p>
                 </div>
                 <div class="icon">
                   <i class="ion ion-bag"></i>
@@ -24,20 +41,7 @@
               </div>
             </div>
             <!-- ./col -->
-            <div class="col-lg-3 col-6">
-              <!-- small box -->
-              <div class="small-box bg-success">
-                <div class="inner">
-                  <h3>53<sup style="font-size: 20px">%</sup></h3>
-
-                  <p>Bounce Rate</p>
-                </div>
-                <div class="icon">
-                  <i class="ion ion-stats-bars"></i>
-                </div>
-                <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-              </div>
-            </div>
+           
             <!-- ./col -->
             <div class="col-lg-3 col-6">
               <!-- small box -->
@@ -45,7 +49,7 @@
                 <div class="inner">
                   <h3>44</h3>
 
-                  <p>User Registrations</p>
+                  <p>Total Orders</p>
                 </div>
                 <div class="icon">
                   <i class="ion ion-person-add"></i>
@@ -60,7 +64,7 @@
                 <div class="inner">
                   <h3>65</h3>
 
-                  <p>Unique Visitors</p>
+                  <p>Products in Salvage</p>
                 </div>
                 <div class="icon">
                   <i class="ion ion-pie-graph"></i>
