--- a/templates/product/_form.html.twig
+++ b/templates/product/_form.html.twig
@@ -1,4 +1,102 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+
+{{ form_start(form,{'attr': {'role':'form'}}) }}
+
+
+      
+        <div class="form-group">
+                  <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.store) }}</label>
+                             {{ form_widget(form.store,{'attr':{'class':'form-control'}}) }}
+                            <div class="help-block with-errors"></div>
+          </div>
+                           
+
+
+
+    <div class="form-group">
+                  <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.category) }}</label>
+                             {{ form_widget(form.category,{'attr':{'class':'form-control'}}) }}
+                            <div class="help-block with-errors"></div>
+     </div>
+
+       
+        <div class="form-group">
+                  <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.brand) }}</label>
+                             {{ form_widget(form.brand,{'attr':{'class':'form-control'}}) }}
+                            <div class="help-block with-errors"></div>
+          </div>
+                
+       
+        <div class="form-group">
+                  <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.productType) }}</label>
+                             {{ form_widget(form.productType,{'attr':{'class':'form-control'}}) }}
+                            <div class="help-block with-errors"></div>
+          </div>
+                
+       
+        <div class="form-group">
+                  <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.name) }}</label>
+                             {{ form_widget(form.name,{'attr':{'class':'form-control'}}) }}
+                            <div class="help-block with-errors"></div>
+          </div>
+        <div class="form-group">
+                  <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.model) }}</label>
+                             {{ form_widget(form.model,{'attr':{'class':'form-control'}}) }}
+                            <div class="help-block with-errors"></div>
+          </div>
+                
+       
+        <div class="form-group">
+                  <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.serial) }}</label>
+                             {{ form_widget(form.serial,{'attr':{'class':'form-control'}}) }}
+                            <div class="help-block with-errors"></div>
+          </div>
+       
+        <div class="form-group">
+                  <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.price) }}</label>
+                             {{ form_widget(form.price,{'attr':{'class':'form-control'}}) }}
+                            <div class="help-block with-errors"></div>
+          </div>
+                
+       
+        <div class="form-group">
+                  <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.quantity) }}</label>
+                             {{ form_widget(form.quantity,{'attr':{'class':'form-control'}}) }}
+                            <div class="help-block with-errors"></div>
+          </div>
+                
+       
+        <div class="form-group">
+                  <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.description) }}</label>
+                             {{ form_widget(form.description,{'attr':{'class':'form-control'}}) }}
+                            <div class="help-block with-errors"></div>
+          </div>
+                
+
+
+
+
+        <div class="form-group custom-checkbox">
+                  <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.isavailable) }}</label>
+                             {{ form_widget(form.isavailable,{'attr':{'class':'float-left '}}) }}
+                            <div class="help-block with-errors"></div>
+          </div>
+
+
+
+
+       
+    {% if not button_label is defined  %}
+			<button class="btn btn-info">{{ button_label|default('Save') }}</button>
+			<button class="btn  btn-warning " style="margin-right:20px;" type="reset">Reset</button>
+
+		{% else %}
+			<input type="hidden" name="edit" value="{{edit}}">
+			<a href="{{ path('product_index') }}" class="btn btn-primary">
+				Cancel
+			</a>
+
+			<button class="btn btn-success mr-2">{{ button_label|default('Save') }}</button>
+		{% endif %}
+
+   
 {{ form_end(form) }}
