--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,47 +1,162 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Product index{% endblock %}
+{% block title %} Departement index
+{% endblock %}
+{% block maintitle %}
 
+	Manage products
+{% endblock %}
+{% block breadcrumb %}
+	<li class="breadcrumb-item active">Stock
+	</li>
+	<li class="breadcrumb-item active">product</li>
+{% endblock %}
 {% block body %}
-    <h1>Product index</h1>
+	<div class="row">
+		<div class="card col-md">
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
+			<div class="card-body">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="card card-info {{edit?'':'collapsed-card'}}">
+							<div class="card-header">
+								<h3 class="card-title">
+									{% if edit  %}Edit
+									{% else %}
+										Add New
+									{% endif %}
+								</h3>
+
+								<div class="card-tools">
+									<button type="button" class="btn btn-tool" data-card-widget="collapse">
+										<i class="fas {{edit?'fa-minus':'fa-plus'}}"></i>
+									</button>
+								</div>
+								<!-- /.card-tools -->
+							</div>
+							<!-- /.card-header -->
+							<div class="card-body">
+								{% if edit  %}
+									{% set button_label = 'Update' %}
+								{% endif %}
+								{{ include('product/_form.html.twig') }}
+
+
+							</div>
+							<!-- /.card-body -->
+						</div>
+					</div>
+
+					<div class="col-md-12">
+						<div class="card card ">
+							<div class="card-header">
+								<h3 class="card-title">Product List</h3>
+								<div class="card-tools">
+
+									<form class="form-inline ml-3">
+										<div class="input-group ">
+											<input class="form-control" autocomplete="off" name="search" type="search" placeholder="Search" aria-label="Search">
+											<div class="input-group-append">
+												<button class=" input-group-text btn btn-navbar " type="submit">
+													<i class="fas fa-search"></i>
+												</button>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
+							<div class="card-body">
+
+
+								<table class="table table-hover">
+									<thead class="thead-light">
+										<tr>
+				<th>#</th>
                 <th>Name</th>
+                <th>Brand</th>
+                <th>Product Type</th>
+                {# <th>Model</th>
+                <th>Serial</th> #}
                 <th>Price</th>
                 <th>Quantity</th>
-                <th>Description</th>
-                <th>Model</th>
-                <th>Serial</th>
-                <th>Isavailable</th>
+                <th>Availability</th>
+                <th>Store</th>
+                <th>Category</th>
+              
+                
+                
                 <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for product in products %}
-            <tr>
-                <td>{{ product.id }}</td>
-                <td>{{ product.name }}</td>
-                <td>{{ product.price }}</td>
-                <td>{{ product.quantity }}</td>
-                <td>{{ product.description }}</td>
-                <td>{{ product.model }}</td>
-                <td>{{ product.serial }}</td>
-                <td>{{ product.isavailable ? 'Yes' : 'No' }}</td>
-                <td>
-                    <a href="{{ path('product_show', {'id': product.id}) }}">show</a>
-                    <a href="{{ path('product_edit', {'id': product.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="9">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+										</tr>
+									</thead>
+									<tbody>
+										{% set i = 1 %}
+										{% for product in products %}
+											<tr>
+												<td>
+													{{ i }}
+													{% set i = i+1 %}
+												</td>
+                                                <td>{{ product.name }}</td>
+                                                <td>{{ product.brand }}</td>
+                                                <td>{{ product.productType }}</td>
+												{# <td>{{ product.model }}</td>
+												<td>{{ product.serial }}</td> #}
+												<td>{{ product.price }}</td>
+												<td>{{ product.quantity }}</td>
+												<td><i class="fas {{ product.isavailable ? 'fa-check':'fa-times' }} " aria-hidden="true"></i></td>
+												<td>{{ product.store }}</td>
+												<td>{{ product.category }}</td>
+												
+												
+												
 
-    <a href="{{ path('product_new') }}">Create new</a>
+
+												<td>
+
+													<form class="d-inline" method="post">
+
+
+														<input type="hidden" name="edit" value="{{product.id}}">
+														<button class="btn btn-info btn-sm" title="Edit">
+															<i class="fa fa-edit"></i>
+														</button>
+													</form>
+													<form class="d-inline" method="post" action="{{ path('product_delete', {'id': product.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+
+														<input type="hidden" name="_method" value="DELETE">
+														<input
+														type="hidden" name="_token" value="{{ csrf_token('delete' ~ product.id) }}">
+														{#  <button type="button" data-type="confirm" class="btn btn-danger js-sweetalert" title="Delete">#}
+														<button class="btn btn-danger btn-sm" title="Delete">
+															<i class="fa fa-trash"></i>
+														</button>
+													</form>
+													<a href="{{ path('product_show', {'id': product.id}) }}" class="btn btn-info btn-sm" title="Show">
+														<i class="fa fa-eye"></i>
+													</a>
+
+												</td>
+
+											</tr>
+										{% else %}
+											<tr>
+												<td colspan="5">no records found</td>
+											</tr>
+										{% endfor %}
+									</tbody>
+								</table>
+								<div class="float-right">{{ knp_pagination_render(products) }}</div>
+
+
+							</div>
+						</div>
+					</div>
+					<!-- /.card-body -->
+				</div>
+			</div>
+
+		</div>
+		<!-- /.card-body -->
+	</div>
+
 {% endblock %}
