--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -7,10 +7,7 @@
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ product.id }}</td>
-            </tr>
+  
             <tr>
                 <th>Name</th>
                 <td>{{ product.name }}</td>
@@ -22,6 +19,10 @@
             <tr>
                 <th>Quantity</th>
                 <td>{{ product.quantity }}</td>
+            </tr>
+            <tr>
+                <th>Product Type</th>
+                <td>{{ product.productType }}</td>
             </tr>
             <tr>
                 <th>Description</th>
@@ -39,12 +40,18 @@
                 <th>Isavailable</th>
                 <td>{{ product.isavailable ? 'Yes' : 'No' }}</td>
             </tr>
+              <tr>
+                <th>Category</th>
+                <td>{{ product.category }}</td>
+            </tr>
+            <tr>
+                <th>Store</th>
+                <td>{{ product.store }}</td>
+            </tr>
+          
         </tbody>
     </table>
 
-    <a href="{{ path('product_index') }}">back to list</a>
+    <a href="{{ path('product_index') }}" class="btn btn-primary">back to list</a>
 
-    <a href="{{ path('product_edit', {'id': product.id}) }}">edit</a>
-
-    {{ include('product/_delete_form.html.twig') }}
 {% endblock %}
