daatabase redesign done

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -230,9 +230,9 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{{ path('order_index') }}" class="nav-link">
+                <a href="{{ path('stock_index') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Order</p>
+                  <p>Stock</p>
                 </a>
               </li>
               <li class="nav-item">
