--- a/templates/balance/index.html.twig
+++ b/templates/balance/index.html.twig
@@ -64,27 +64,31 @@
 											<th>UOM</th>
 											<th>actions</th>
 										</tr>
-									</thead>
+									</thead> 
 									<tbody>
 										{% set i = 1 %}
 										{% for stock in stocks %}
+
+										{# <pre>
+											{{ dump(stock) }}
+										</pre> #}
 											<tr>
 												<td>
 													{{ i }}
 													{% set i = i+1 %}
 												</td>
-												<td>{{ stock.product }}</td>
-												<td>{{ stock.quantity }}</td>
-												<td>{{ 2*i}}</td>
-												{# <td>{{ stock.oquantity }}</td> #}
+												 <td>{{ stock.productName }}</td>
+												<td>{{ stock.avail.stock }}</td>
+												<td>{{ stock.avail.requested }}</td>
+											 
 												 <td>{{ stock.unit }}</td> 
-												{# <td>{{ stock.date | date('Y-m-d') }}</td> #}
+												   
 												<td>
 
 													
-													<a href="{{ path('product_show', {'id': stock.pid}) }}" class="btn btn-info btn-sm" title="Show">
+													<a href="{{ path('product_show', {'id': stock.productId}) }}" class="btn btn-info btn-sm" title="Show">
 														<i class="">More</i>
-													</a>
+													</a> 
 
                                                    
 
@@ -95,10 +99,10 @@
 											<tr>
 												<td colspan="5">no records found</td>
 											</tr>
-										{% endfor %}
+										{% endfor %} 
 									</tbody>
 								</table>
-								<div class="float-right">{{ knp_pagination_render(stocks) }}</div>
+								{# <div class="float-right">{{ knp_pagination_render(stocks) }}</div> #}
 
 
 							</div>
