--- a/templates/balance/index.html.twig
+++ b/templates/balance/index.html.twig
@@ -102,7 +102,7 @@
 										{% endfor %} 
 									</tbody>
 								</table>
-								{# <div class="float-right">{{ knp_pagination_render(stocks) }}</div> #}
+								<div class="float-right">{{ knp_pagination_render(stocks) }}</div>
 
 
 							</div>
