--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -39,8 +39,8 @@
                     <td><input type="number" name = "quantity" placeholder="Insert quantity here" required/></td>
                 </tr>
                 <tr>
-                    <th>Remark</th>
-                    <td ><textarea type="text" name = "remark" placeholder="Write any remarks here." style="widht:440px"></textarea></td>
+                    <th>Request Purpose</th>
+                    <td ><textarea type="text" name = "remark" placeholder="Write any remarks here." style="widht:440px" required></textarea></td>
                 </tr>
             
                 
