--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -230,6 +230,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a href="{{ path('order_index') }}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Requests</p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a href="{{ path('stock_index') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Stock in Out</p>
