--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
 		</title>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+    	<link rel="stylesheet" href="{{asset('assets/css/bootstrap.min.css')}}">
 		<link rel="stylesheet" href="{{asset('assets/plugins/fontawesome-free/css/all.min.css')}}">
 		<link rel="stylesheet" href="{{asset('assets/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css')}}">
 
@@ -407,6 +408,7 @@
 						<script src="{{asset('assets/plugins/jquery-validation/additional-methods.min.js"></script> #}
 			<!-- AdminLTE App --><script src="{{asset('assets/dist/js/adminlte.min.js')}}"> </script>
 			<script src="{{asset('assets/plugins/select2/js/select2.full.min.js')}}"></script>
+			<script src="{{asset('assets/js/bootstrap.min.js')}}"></script>
 
 
 			{% block javascripts %}{% endblock %}
