--- a/templates/orders/show.html.twig
+++ b/templates/orders/show.html.twig
@@ -118,7 +118,7 @@
 <th>{{ include('orders/_delete_form.html.twig') }}</th>
 
 {% else %}
-<th  style="margin:0px"><form action ="#" method="POST"> <input type="submit" value="Download" name="download" class="btn btn-info"></input></form></th>
+<th  style="margin:0px"><form action ="{{path('model22',{id:order.id})}}" method="POST"> <input type="submit" value="Model 22" name="mod22" class="btn btn-info"></input></form></th>
 {% endif %}
 
 </tr>
