print for stock

--- a/templates/product/create.html.twig
+++ b/templates/product/create.html.twig
@@ -22,7 +22,7 @@
 					{{ include('product/_form.html.twig') }}
 					<input type='hidden' value='add_more' name='add'> 
 					<button class="btn btn-info" id="add">{{ button_label|default('Save') }}</button>
-					<button class="btn btn-success" id="add_more">{{ button_label|default('Add and More') }}</button>
+					<button class="btn btn-success" id="add_more">{{ button_label|default('Save and More') }}</button>
 					<button class="btn  btn-warning " style="margin-right:20px;" type="reset">Reset</button>
 					{{ form_end(form) }}
 				</div>
