--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -36,10 +36,7 @@
            
                 <tr>
                     <th>Quantity</th>
-                    <td>
-                        <input type="number" name = "quantity" placeholder="Insert quantity here" required/>
-                        <input type="hidden" name = "id" value="{{ product.id }}"/>
-                    </td>
+                    <td><input type="number" name = "quantity" placeholder="Insert quantity here" required/></td>
                 </tr>
               
                 {# <tr>
