--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,9 +21,8 @@
 		<link rel="stylesheet" href="{{asset('assets/dist/css/adminlte.min.css')}}">
 		<link rel="stylesheet" href="{{asset('assets/plugins/select2/css/select2.min.css')}}">
 		<link rel="stylesheet" href="{{asset('assets/plugins/daterangepicker/daterangepicker.css')}}">
-		<link
-		rel="stylesheet" href="{{asset('assets/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css')}}">
-
+		<link rel="stylesheet" href="{{asset('assets/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css')}}">
+    <link rel="stylesheet" href="{{asset('assets/css/custom.css')}}">
     <link href="{{asset('assets/plugins/fontface/OpenSans.css')}}" rel="stylesheet">
 		{#
 				    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"> #}
@@ -233,6 +232,12 @@
                 <a href="{{ path('product_index') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Product</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="{{ path('product_index2') }}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Product2</p>
                 </a>
               </li>
               <li class="nav-item">
